--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -15,14 +15,14 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="4" column="0" colspan="2">
+    <item row="3" column="0" colspan="2">
      <widget class="QPushButton" name="pbSearch">
       <property name="text">
        <string>Suchen</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="2" colspan="2">
+    <item row="3" column="2" colspan="2">
      <spacer name="horizontalSpacer_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -35,7 +35,7 @@
       </property>
      </spacer>
     </item>
-    <item row="5" column="0" colspan="5">
+    <item row="4" column="0" colspan="5">
      <widget class="QPlainTextEdit" name="teShowActions">
       <property name="readOnly">
        <bool>true</bool>
@@ -81,65 +81,14 @@
       </property>
      </spacer>
     </item>
-    <item row="0" column="4" rowspan="5">
+    <item row="0" column="4" rowspan="4">
      <widget class="QTableWidget" name="tableWidget">
       <property name="editTriggers">
        <set>QAbstractItemView::NoEditTriggers</set>
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>Auflösung</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1" colspan="2">
-     <widget class="QComboBox" name="comboBox_2">
-      <item>
-       <property name="text">
-        <string>800x600</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>1920x1080</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>1920x1200</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>2560x1440</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-    <item row="1" column="3">
-     <spacer name="horizontalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>77</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
     <item row="2" column="0">
-     <widget class="QLabel" name="label_3">
-      <property name="text">
-       <string>Suche ab</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -152,18 +101,35 @@
       </property>
      </spacer>
     </item>
-    <item row="2" column="1" colspan="2">
-     <widget class="QLineEdit" name="lineEdit">
-      <property name="inputMask">
-       <string>0000-00-00</string>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>Titel anzeigen</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="3">
-     <widget class="QToolButton" name="toolButton">
-      <property name="text">
-       <string>...</string>
-      </property>
+    <item row="1" column="1" colspan="2">
+     <widget class="QComboBox" name="cmbTitle">
+      <item>
+       <property name="text">
+        <string>nie </string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>nur im Programm</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>nur beim Speichern</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Immer</string>
+       </property>
+      </item>
      </widget>
     </item>
    </layout>
@@ -174,17 +140,9 @@
      <x>0</x>
      <y>0</y>
      <width>447</width>
-     <height>26</height>
+     <height>27</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
