Crash with empty database table Context menu for overview. Context menu "Set as background" works on Linux (KDE) Context menu "Show" works non latin letters removed from filenames ImageItem didn't manage deleted flag removed debug output

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>447</width>
+    <width>566</width>
     <height>331</height>
    </rect>
   </property>
@@ -118,6 +118,9 @@
               <width>200</width>
               <height>150</height>
              </size>
+            </property>
+            <property name="contextMenuPolicy">
+             <enum>Qt::CustomContextMenu</enum>
             </property>
             <property name="editTriggers">
              <set>QAbstractItemView::NoEditTriggers</set>
@@ -299,7 +302,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>447</width>
+     <width>566</width>
      <height>27</height>
     </rect>
    </property>
