--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>566</width>
-    <height>331</height>
+    <width>581</width>
+    <height>445</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,11 +26,31 @@
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
            <layout class="QGridLayout" name="gridLayout_2">
-            <item row="0" column="0">
-             <widget class="QLabel" name="label">
-              <property name="text">
-               <string>Format</string>
+            <item row="2" column="0">
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
               </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>29</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="1">
+             <widget class="QComboBox" name="cmbTitle">
+              <item>
+               <property name="text">
+                <string>Keinen Titel anzeigen</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Zeige Titel</string>
+               </property>
+              </item>
              </widget>
             </item>
             <item row="0" column="1">
@@ -59,42 +79,12 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="1">
-             <widget class="QComboBox" name="cmbTitle">
-              <item>
-               <property name="text">
-                <string>nie </string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>nur im Programm</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>nur beim Speichern</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>Immer</string>
-               </property>
-              </item>
+            <item row="0" column="0">
+             <widget class="QLabel" name="label">
+              <property name="text">
+               <string>Format</string>
+              </property>
              </widget>
-            </item>
-            <item row="2" column="0">
-             <spacer name="verticalSpacer">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>29</height>
-               </size>
-              </property>
-             </spacer>
             </item>
            </layout>
           </item>
@@ -302,7 +292,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>566</width>
+     <width>581</width>
      <height>27</height>
     </rect>
    </property>
