--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,7 +26,7 @@
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
            <layout class="QGridLayout" name="gridLayout_2">
-            <item row="2" column="0">
+            <item row="3" column="0">
              <spacer name="verticalSpacer">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -83,6 +83,27 @@
              <widget class="QLabel" name="label">
               <property name="text">
                <string>Format</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="1">
+             <widget class="QComboBox" name="cmbDisplay">
+              <item>
+               <property name="text">
+                <string>Flach</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>In Ordnern nach Tags</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="2" column="0">
+             <widget class="QLabel" name="label_2">
+              <property name="text">
+               <string>Anzeige</string>
               </property>
              </widget>
             </item>
