--- a/resources.qrc
+++ b/resources.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>icons/folder.png</file>
         <file>icons/folderup.png</file>
+        <file>icons/folderbin.png</file>
     </qresource>
 </RCC>
