Start of managing tags

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,31 +26,11 @@
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
            <layout class="QGridLayout" name="gridLayout_2">
-            <item row="3" column="0">
-             <spacer name="verticalSpacer">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
+            <item row="2" column="0">
+             <widget class="QLabel" name="label_2">
+              <property name="text">
+               <string>Anzeige</string>
               </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>29</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item row="1" column="1">
-             <widget class="QComboBox" name="cmbTitle">
-              <item>
-               <property name="text">
-                <string>Keinen Titel anzeigen</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>Zeige Titel</string>
-               </property>
-              </item>
              </widget>
             </item>
             <item row="0" column="1">
@@ -71,6 +51,33 @@
                </property>
               </item>
              </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QComboBox" name="cmbTitle">
+              <item>
+               <property name="text">
+                <string>Keinen Titel anzeigen</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Zeige Titel</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="4" column="0">
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>29</height>
+               </size>
+              </property>
+             </spacer>
             </item>
             <item row="1" column="0">
              <widget class="QLabel" name="label_3">
@@ -100,10 +107,10 @@
               </item>
              </widget>
             </item>
-            <item row="2" column="0">
-             <widget class="QLabel" name="label_2">
+            <item row="2" column="2">
+             <widget class="QToolButton" name="tbTags">
               <property name="text">
-               <string>Anzeige</string>
+               <string>...</string>
               </property>
              </widget>
             </item>
@@ -314,7 +321,7 @@
      <x>0</x>
      <y>0</y>
      <width>581</width>
-     <height>27</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
