--- a/resources.qrc
+++ b/resources.qrc
@@ -3,5 +3,8 @@
         <file>icons/folder.png</file>
         <file>icons/folderup.png</file>
         <file>icons/folderbin.png</file>
+        <file>icons/list-add.png</file>
+        <file>icons/list-remove.png</file>
+        <file>icons/application-certificate.png</file>
     </qresource>
 </RCC>
