--- a/managetags.ui
+++ b/managetags.ui
@@ -73,6 +73,9 @@
        <attribute name="horizontalHeaderVisible">
         <bool>true</bool>
        </attribute>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
        <attribute name="verticalHeaderVisible">
         <bool>false</bool>
        </attribute>
