Sane default for title combobox if no saved settings are available Added button to open image folder in file explorer Updated translation

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -173,6 +173,13 @@
            </widget>
           </item>
           <item>
+           <widget class="QPushButton" name="pbOpenFolder">
+            <property name="text">
+             <string>Verzeichnis</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <spacer name="horizontalSpacer_3">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
