--- a/finddialog.ui
+++ b/finddialog.ui
@@ -47,6 +47,9 @@
    </item>
    <item row="1" column="0">
     <widget class="QTableWidget" name="tbwOverview">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
      <attribute name="horizontalHeaderStretchLastSection">
       <bool>true</bool>
      </attribute>
